--- a/resources/resources.rc
+++ b/resources/resources.rc
@@ -3,11 +3,11 @@
 
 IDI_ICON1 ICON "poeng.ico"
 
-#define VER_FILEVERSION             2,0,0,0
-#define VER_FILEVERSION_STR         "2.0.0.0\0"
+#define VER_FILEVERSION             2,1,0,0
+#define VER_FILEVERSION_STR         "2.1.0.0\0"
 
-#define VER_PRODUCTVERSION          2,0,0,0
-#define VER_PRODUCTVERSION_STR      "2.0\0"
+#define VER_PRODUCTVERSION          2,1,0,0
+#define VER_PRODUCTVERSION_STR      "2.1\0"
 
 #ifdef NDEBUG
 #define VER_DEBUG                   0
@@ -17,7 +17,7 @@ IDI_ICON1 ICON "poeng.ico"
 
 #define VER_COMPANYNAME_STR "Crapola"
 #define VER_FILEDESCRIPTION_STR "Poeng"
-#define VER_INTERNALNAME_STR "Poeng 2.0"
+#define VER_INTERNALNAME_STR "Poeng v2"
 #define VER_LEGALCOPYRIGHT_STR "https://github.com/crapola/Poeng"
 #define VER_ORIGINALFILENAME_STR "Poeng.exe"
 #define VER_PRODUCTNAME_STR "Poeng"
