--- a/makefile_release
+++ b/makefile_release
@@ -1,5 +1,5 @@
 # Executable name.
-exe=Release\PoengSDL
+exe=Release\Poeng
 warnings=-Wall -Weffc++ -pedantic -Wextra
 # Includes.
 includes=-IF:\Libraries\SDL2-2.0.10\x86_64-w64-mingw32\include\SDL2 \
@@ -12,8 +12,8 @@ LDFLAGS=-LF:\Libraries\SDL2-2.0.10\x86_64-w64-mingw32\lib \
 # Libs to link against. Most dependant first.
 # Example: -lgdi32 -luser32 -lkernel32 -lwinmm
 LDLIBS=-lmingw32 -lSDL2main -lSDL2.dll -luser32 -lgdi32 -lwinmm -ldxguid -lsdl2 -lsdl2_mixer \
+-mwindows -s
 #-static-libgcc -static-libstdc++ -Wl,-Bstatic -lstdc++ -lpthread -Wl,-Bdynamic \
--mwindows
 #-------------------------------------------------------------------------------
 src_folders=src
 CXXFLAGS=-std=c++17 $(warnings) $(includes) $(options) -MMD
